<resources>
    <string name="app_name">NLG.com</string>
    <string name="logo">We ship Everyday!</string>
    <string name="add_new_item">Add New Item</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_item">Menu Item</string>
    <string name="add_subscription">Add Subscription</string>
    <string name="add_route">Add Route</string>
    <string name="view_routes">View Routes</string>
    <string name="add_new_route">Add Route</string>
    <string name="failed_to_add_the_route">Failed to add the route!</string>
    <string name="add_new_subscription">Add Subscription</string>
    <string name="return_to_main_menu">Return to Main Menu</string>
    <string name="customer_name">Customer Name</string>
    <string name="address">Address</string>
    <string name="product_id">Product ID</string>
    <string name="quantity">Quantity</string>

</resources>